Fixed bug in navbar and changed global font size from 1 to .9 for better readability

--- a/src/_layout.less
+++ b/src/_layout.less
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  font-size: .9em;
 }
 
 img {
@@ -14,6 +15,10 @@ a:focus {
 hr {
   border-color: @separator_color;
   border-style: solid;
+}
+
+pre {
+  font-size: .8em;
 }
 
 .Yayul_main {
