--- a/src/components/header.less
+++ b/src/components/header.less
@@ -59,14 +59,14 @@
     right: 0;
     width: 100vw;
     box-sizing: border-box;
-    padding: 0 10vw;
+    padding: 0 5vw;
   }
 
   &__links {
     font-size: 1.5em;
     list-style: none;
     text-align: right;
-
+    padding: 0;
   }
 
   &__item {
